# langchain-tutorial

./: .env.local  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
src/: langchain-simple.ipynb
